# pixi

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  vfs-plan-review.md
crates/http_cache_sqlite/src/: lib.rs
crates/pixi/: Cargo.toml
crates/pixi-build-backend/src/: tools.rs
crates/pixi-build-rattler-build/src/: protocol.rs  rattler_build.rs
crates/pixi_api/: Cargo.toml
crates/pixi_api/src/: context.rs
crates/pixi_build_backend/src/: compilers.rs  dependencies.rs  encoded_source_spec_url.rs  generated_recipe.rs  intermediate_backend.rs  specs_conversion.rs
crates/pixi_build_backend_passthrough/src/: lib.rs
crates/pixi_build_cmake/src/: main.rs
crates/pixi_build_discovery/src/: discovery.rs
crates/pixi_build_mojo/src/: main.rs
crates/pixi_build_python/src/: main.rs  metadata.rs  pypi_mapping.rs
crates/pixi_build_r/src/: main.rs  metadata.rs
crates/pixi_build_rattler_build/src/: protocol.rs
crates/pixi_build_ros/: Cargo.toml
crates/pixi_build_ros/src/: main.rs  workspace_discovery.rs
crates/pixi_build_rust/src/: main.rs
crates/pixi_build_type_conversions/: Cargo.toml
crates/pixi_build_type_conversions/src/: project_model.rs
crates/pixi_build_types/src/: lib.rs  project_model.rs
crates/pixi_cli/: Cargo.toml
crates/pixi_cli/src/: add.rs  build.rs  cli_config.rs  daemon.rs  exec.rs  install.rs  lib.rs  list.rs  lock.rs  publish.rs  reinstall.rs  remove.rs  run.rs  search.rs  shell.rs  shell_hook.rs  task.rs  tree.rs  update.rs  upgrade.rs
crates/pixi_command_dispatcher/: Cargo.toml
crates/pixi_command_dispatcher/src/: cache_dirs.rs  checkout.rs  compute_data.rs  errors.rs  injected_config.rs  input_globs.rs  installed_source_hints.rs  lib.rs  reporter.rs  reporter_lifecycle.rs
crates/pixi_compute_engine/src/: any_key.rs  builder.rs  ctx.rs  engine.rs  error.rs  graph_owner.rs  injected.rs  key.rs  key_graph.rs  lib.rs  versions.rs
crates/pixi_compute_fs/: Cargo.toml
crates/pixi_compute_fs/examples/: glob_watch.rs
crates/pixi_compute_fs/src/: lib.rs
crates/pixi_compute_fs/tests/: basic.rs  concurrency.rs  glob.rs  glob_mtime_perf.rs  structured_deps.rs
crates/pixi_compute_reporters/src/: lib.rs
crates/pixi_compute_sources/src/: git.rs
crates/pixi_compute_sources/tests/: git_checkout.rs
crates/pixi_conda/: Cargo.toml
crates/pixi_conda/src/: cli.rs  command_dispatcher.rs  lib.rs
crates/pixi_conda/src/activate/: mod.rs
crates/pixi_conda/src/create/: input.rs  mod.rs
crates/pixi_conda/src/install/: mod.rs
crates/pixi_conda/src/run/: mod.rs
crates/pixi_config/src/: lib.rs
crates/pixi_consts/src/: consts.rs
crates/pixi_core/: Cargo.toml
crates/pixi_core/src/: activation.rs
crates/pixi_daemon/: Cargo.toml
crates/pixi_daemon/examples/: glob_mtime_daemon.rs
crates/pixi_daemon/src/: ipc.rs  lib.rs
crates/pixi_git/src/: git.rs  lfs.rs  lib.rs  resolver.rs  source.rs
crates/pixi_git/tests/: lfs.rs
crates/pixi_glob/: Cargo.toml
crates/pixi_glob/src/: glob_hash.rs  lib.rs  persistent_glob_hash_cache.rs
crates/pixi_manifest/: Cargo.toml
crates/pixi_reporters/: Cargo.toml
crates/pixi_task/: Cargo.toml
crates/pixi_utils/: Cargo.toml
crates/pixi_vfs/: Cargo.toml  THIRD_PARTY.md
crates/pixi_vfs/src/: backend.rs  glob.rs  index.rs  lib.rs  read.rs  state.rs
crates/pixi_vfs/src/walk/: mod.rs  parallel.rs
crates/pixi_vfs/tests/: indexed_glob.rs  indexed_glob_perf.rs
daemon-research/: bazel-filesystem-monitoring.md  buck2-filesystem-monitoring.md  design-external-precedents.md  design-local-seams.md  design-production-frame.md  external-precedents.md  invalidation-research-mini-design.md  local-architecture.md  minimal-compute-invalidation.md  minimal-state-slice.md  production-path.md  state-lock-satisfiability.md  state-run-flow.md  state-source-metadata.md
design/: pixi-daemon-followup-handoff.md  pixi-daemon-ipc-design.md  pixi-daemon.md  pixi-fs-graph-agent-handoff.md  pixi-fs-graph-implementation-handoff.md  pixi-invalidation-research-handoff.md  unified-freshness-fast-path.md
docs/reference/: pixi_configuration.md  pixi_manifest.md
examples/cpp-sdl/: pixi.toml
schema/: model.py  pixi_build_api.json  schema.json
schema/pyproject/: partial-pixi.json  schema.json
src/: environment.rs  lib.rs
src/cli/: mod.rs  run.rs  show.rs  task.rs
src/lock_file/: update.rs
src/project/: mod.rs
src/task/: executable_task.rs  file_hashes.rs  hash.rs  mod.rs  task_graph.rs  task_hash.rs  traverse.rs
src/utils/: spanned.rs
tests/common/: mod.rs
tests/integration_python/: test_main_cli.py
(+287 files in other folders)
