[package]
authors.workspace = true
description = "The core of an implementation of the conda package manager"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_conda"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[features]
default = ["rustls-tls"]
native-tls = ["pixi_utils/native-tls"]
rustls-tls = ["pixi_utils/rustls-tls"]

[dependencies]
clap = { workspace = true, features = [
  "derive",
  "std",
  "error-context",
  "env",
] }
console = { workspace = true, features = [
  "ansi-parsing",
  "unicode-width",
  "windows-console-colors",
] }
dialoguer = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true }
human_bytes = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
pixi_build_frontend = { workspace = true }
pixi_command_dispatcher = { workspace = true }
pixi_config = { workspace = true }
pixi_progress = { workspace = true }
pixi_record = { workspace = true }
pixi_reporters = { workspace = true }
pixi_spec = { workspace = true }
pixi_spec_containers = { workspace = true }
pixi_utils = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_shell = { workspace = true }
rattler_solve = { workspace = true, features = ["libsolv_c", "resolvo"] }
rattler_virtual_packages = { workspace = true }
tabwriter = { workspace = true, features = ["ansi_formatting"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
