[package]
authors.workspace = true
description = "Indexed filesystem walking and glob aggregates for pixi"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_vfs"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
fs-err = { workspace = true }
ignore = "0.4"
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
pixi_glob = { workspace = true }
tempfile = { workspace = true }
